# Protocol

./: CMakeLists.txt  LICENSE  README.md
doc/: Doxyfile.in
include/protocol/: macros.h
include/protocol/service/: singleton.hpp
include/protocol/tcp/client/: connection.hpp  http.hpp  http_get.hpp  http_post.hpp
include/protocol/tcp/client/connection/: ptr.hpp
include/protocol/tcp/client/http_get/: ptr.hpp
include/protocol/tcp/client/http_post/: ptr.hpp
include/protocol/tcp/server/: acceptor.hpp
include/protocol/tcp/server/acceptor/: ptr.hpp
include/protocol/tcp/socket/: buffer.hpp  ptr.hpp  read_one.hpp  read_one_handlers.hpp  write_one.hpp
include/protocol/tcp/socket/buffer/: ptr.hpp
include/protocol/tcp/socket/read_one/: ptr.hpp
include/protocol/tcp/socket/write_one/: ptr.hpp
src/: CMakeLists.txt
src/protocol/service/inc/protocol/service/: service.hpp
src/protocol/service/src/: service.cpp  singleton.cpp
src/protocol/tcp/client/src/: connection.cpp  http.cpp  http_get.cpp  http_post.cpp
src/protocol/tcp/client/tests/: connection.cpp
src/protocol/tcp/server/src/: acceptor.cpp
src/protocol/tcp/server/tests/: acceptor.cpp
src/protocol/tcp/socket/src/: buffer.cpp  read_one.cpp  read_one_handlers.cpp  write_one.cpp
src/protocol/tcp/socket/tests/: buffer.cpp  read_one.cpp  write_one.cpp
src/protocol/tests/: exampl0.cpp  main.cpp  server_client.cpp  write_read.cpp
src/protocol/utility/: CMakeLists.txt
src/protocol/utility/inc/protocol/utility/: get_available_port.hpp
src/protocol/utility/src/posix/: get_available_port.cpp
